--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -21,8 +21,14 @@ jobs:
     steps:
       - run: echo "This is an integration step"
       - run: exit 1
+    continue-on-error: true 
 
   prod:
     runs-on: ubuntu-20.04
     steps:
       - run: echo "This is a deploy step"
+
+  artifact:
+    runs-on: ubuntu-20.04
+    steps:
+      - run: echo "hello" > hello.txt
