--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -47,7 +47,8 @@ jobs:
      steps: 
        - uses: actions/checkout@v2
        - run: docker run --rm -v $(pwd):/src hysnsec/trufflehog file:///src --json > trufflehog-output.json
-       
+         continue-on-error: true
+
        - uses: actions/upload-artifact@v2
          with:
            name: TruffleHog
