--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,7 +1,7 @@
 name: Django                                  # workflow name
 
 on:
-  push:                                       
+  push:
     branches:                                 # similar to "only" in GitLab
       - main
 
@@ -40,24 +40,25 @@ jobs:
           source env/bin/activate
           pip install -r requirements.txt
           python manage.py test taskManager
-  
-   secret_scanning:
-     runs-on: ubuntu-20.04
-     needs: test
-     steps: 
-       - uses: actions/checkout@v2
-       - run: docker run --rm -v $(pwd):/src hysnsec/trufflehog file:///src --json > trufflehog-output.json
-         continue-on-error: true
 
-       - uses: actions/upload-artifact@v2
-         with:
-           name: TruffleHog
-           path: trufflehog-output.json
-         if: always()
-   
-  integration:
+  secret_scanning:
     runs-on: ubuntu-20.04
     needs: test
+    steps:
+      - uses: actions/checkout@v2
+
+      - run: docker run --rm -v $(pwd):/src hysnsec/trufflehog file:///src --json > trufflehog-output.json
+        continue-on-error: true             # allow the build to fail, similar to "allow_failure: true" in GitLab
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: TruffleHog
+          path: trufflehog-output.json
+        if: always()                        # what is this for?
+
+  integration:
+    runs-on: ubuntu-20.04
+    needs: secret_scanning
     steps:
       - run: echo "This is an integration step"
       - run: exit 1
